--- a/plugin.xml
+++ b/plugin.xml
@@ -1,21 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
-<?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-mathcalculator" version="1.0.0">
-   <name>mathCalculator</name>
-   <js-module name="mathCalculator" src="www/mathCalculator.js">
-      <clobbers target="mathCalculator" />
-   </js-module>
-   <platform name="android">
-      <config-file parent="/*" target="res/xml/config.xml">
-         <feature name="mathCalculator">
-            <param name="android-package" value="cordova.plugin.mathcalculator.mathCalculator" />
-         </feature>
-      </config-file>
-      <config-file parent="/*" target="AndroidManifest.xml" />
-      <source-file src="src/android/mathCalculator.java" target-dir="src/cordova/plugin/mathcalculator/mathCalculator" />
-   </platform>
-   <platform name="ios">
-      <config-file parent="/*" target="config.xml">
-         <feature name="mathCalculator">
-            <param name="ios-package" value="mathCalculator" />
-         </feature>
+<plugin id="cordova-plugin-mathcalculator" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<name>mathCalculator</name>
+<js-module name="mathCalculator" src="www/mathCalculator.js">
+<clobbers target="cordova.plugins.mathCalculator" />
+</js-module>
+<platform name="android"><config-file parent="/*" target="res/xml/config.xml">
+<feature name="mathCalculator"><param name="android-package" value="cordova.plugin.mathcalculator.mathCalculator" />
+</feature></config-file><config-file parent="/*" target="AndroidManifest.xml" />
+<source-file src="src/android/mathCalculator.java" target-dir="src/cordova/plugin/mathcalculator/mathCalculator" />
+</platform>
+<platform name="ios"><config-file parent="/*" target="config.xml"><feature name="mathCalculator"><param name="ios-package" value="mathCalculator" /></feature></config-file>
+<source-file src="src/ios/mathCalculator.m" />
+</platform>
+</plugin>
